--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "interface",
+  "name": "business-logic-local-dashboard",
   "dependencies": {
     "handlebars": "~1.3.0",
     "jquery": "^1.11.1",
@@ -12,6 +12,9 @@
     "ember-load-initializers": "ember-cli/ember-load-initializers#0.0.2",
     "ember-qunit": "0.1.8",
     "ember-qunit-notifications": "0.0.4",
-    "qunit": "~1.15.0"
+    "qunit": "~1.15.0",
+    "ember-uploader": "~0.3.4",
+    "randomcolor": "~0.2.0",
+    "bootstrap-sass-official": "~3.3.3"
   }
 }
