--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "interface",
-  "version": "0.0.0",
-  "description": "Small description for interface goes here",
+  "name": "business-logic-local-dashboard",
+  "version": "0.0.1",
+  "description": "HTTP dashboard running inside your local Kinvey Business Logic container",
   "private": true,
   "directories": {
-    "doc": "doc",
     "test": "tests"
   },
   "scripts": {
@@ -21,10 +20,13 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.0",
     "broccoli-ember-hbs-template-compiler": "^1.6.1",
+    "broccoli-sass": "0.3.3",
     "ember-cli": "0.1.7",
+    "ember-cli-6to5": "0.2.1",
+    "ember-cli-chart": "1.0.6",
+    "ember-cli-coffeescript": "0.7.0",
     "ember-cli-content-security-policy": "0.3.0",
     "ember-cli-dependency-checker": "0.0.7",
-    "ember-cli-6to5": "0.2.1",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-qunit": "0.1.2",
