--- a/package.json
+++ b/package.json
@@ -10,14 +10,12 @@
     "start": "ember server",
     "build": "ember build",
     "test": "ember test",
-    "postinstall": "node_modules/.bin/ember build"
+    "prepublish": "./node_modules/.bin/ember build --environment='production'"
   },
   "repository": "",
   "engines": {
     "node": ">= 0.10.0"
   },
-  "author": "",
-  "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.0",
     "broccoli-ember-hbs-template-compiler": "^1.6.1",
