--- a/package.json
+++ b/package.json
@@ -1,24 +1,31 @@
 {
-  "name": "business-logic-local-dashboard",
-  "version": "0.0.2",
-  "description": "HTTP dashboard running inside your local Kinvey Business Logic container",
-  "private": true,
-  "directories": {
-    "test": "tests"
+  "name"         : "business-logic-local-dashboard",
+  "version"      : "0.1.0",
+  "description"  : "HTTP dashboard running inside your local Kinvey Business Logic container",
+  "private"      : true,
+  "homepage"     : "http://www.kinvey.com",
+  "bugs"         : "https://github.com/Kinvey/business-logic-local-dashboard/issues",
+  "license"      : "Apache-2.0",
+  "author"       : "Kinvey, Inc.",
+  "contributors" : [
+    "Gal Niv <galniv@kinvey.com>",
+    "Mark van Seventer <mark@kinvey.com>"
+  ],
+  "directories" : { "test": "tests" },
+  "repository"  : { "type": "git", "url": "Kinvey/business-logic-local-dashboard" },
+  "scripts"     : {
+    "start" : "ember server",
+    "build" : "ember build",
+    "test"  : "ember test",
+    "prepublish"       : "npm run prepublish:bower && npm run prepublish:build",
+    "prepublish:bower" : "./node_modules/.bin/bower install",
+    "prepublish:build" : "./node_modules/.bin/ember build --environment='production'"
   },
-  "scripts": {
-    "start": "ember server",
-    "build": "ember build",
-    "test": "ember test",
-    "prepublish": "./node_modules/.bin/ember build --environment='production'"
-  },
-  "repository": "",
-  "engines": {
-    "node": ">= 0.10.0"
-  },
-  "devDependencies": {
-    "broccoli-asset-rev": "^2.0.0",
-    "broccoli-ember-hbs-template-compiler": "^1.6.1",
+  "dependencies"    : { },
+  "devDependencies" : {
+    "bower": "1.5.x",
+    "broccoli-asset-rev": "2.2.x",
+    "broccoli-ember-hbs-template-compiler": "1.7.x",
     "broccoli-sass": "0.3.3",
     "ember-cli": "0.1.7",
     "ember-cli-6to5": "0.2.1",
@@ -27,11 +34,12 @@
     "ember-cli-content-security-policy": "0.3.0",
     "ember-cli-dependency-checker": "0.0.7",
     "ember-cli-ic-ajax": "0.1.1",
-    "ember-cli-inject-live-reload": "^1.3.0",
+    "ember-cli-inject-live-reload": "1.3.x",
     "ember-cli-qunit": "0.1.2",
     "ember-data": "1.0.0-beta.12",
-    "ember-export-application-global": "^1.0.0",
-    "express": "^4.8.5",
-    "glob": "^4.0.5"
-  }
+    "ember-export-application-global": "1.0.x",
+    "express": "4.13.x",
+    "glob": "4.5.x"
+  },
+  "engines": { "node": ">= 0.10.0" }
 }
