--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
   "directories" : { "test": "tests" },
   "repository"  : { "type": "git", "url": "Kinvey/business-logic-local-dashboard" },
   "scripts"     : {
+    "pretest": "npm run lint",
+    "lint": "./node_modules/.bin/eslint config app test *.js",
     "start" : "ember server",
     "build" : "ember build",
-    "test"  : "ember test",
+    "test"  : "npm run test-unit && npm run test-integration",
+    "test-unit": "ember test",
+    "test-integration": "echo \"No integration tests available for the moment\"",
     "prepublish"       : "npm run prepublish:bower && npm run prepublish:build",
     "prepublish:bower" : "./node_modules/.bin/bower install",
-    "prepublish:build" : "./node_modules/.bin/ember build --environment='production'"
+    "prepublish:build" : "./node_modules/.bin/ember build --environment='production'",
+    "test-npm-security": "npm audit"
   },
   "dependencies"    : { },
   "devDependencies" : {
