--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,34 @@
----
-language: node_js
-
-sudo: false
-
-cache:
-  directories:
-    - node_modules
+env:
+  global:
+    - NODEJS_VERSION='6.11.1'
 
 before_install:
-  - "npm config set spin false"
-  - "npm install -g npm@^2"
+  - npm i -g npm@^6.0.0
 
-install:
-  - npm install -g bower
-  - npm install
-  - bower install
+matrix:
+  include:
+    - language: node_js
+      env: JOB='LINTING'
+      node_js: ${NODEJS_VERSION}
+      script: npm run lint
+      
+    - language: node_js
+      node_js: ${NODEJS_VERSION}
+      env: JOB='UNIT'
+      script: npm run test-unit
 
-script:
-  - npm test
+
+    - language: node_js
+      node_js: ${NODEJS_VERSION}
+      env: JOB='INTEGRATION'
+      script: npm run test-integration
+
+    - language: node_js
+      node_js: ${NODEJS_VERSION}
+      env: JOB='NPM SECURITY'
+      script: npm run test-npm-security
+
+notifications:
+  email:
+    on_success: change
+    on_failure: always
