--- a/package.json
+++ b/package.json
@@ -31,13 +31,14 @@
     "prepublish:build": "./node_modules/.bin/ember build --environment='production'",
     "test-npm-security": "npm audit"
   },
-  "dependencies": {},
+  "dependencies": {
+    "ember-cli": "0.1.7"
+  },
   "devDependencies": {
     "bower": "1.5.x",
     "broccoli-asset-rev": "2.2.x",
     "broccoli-ember-hbs-template-compiler": "1.7.x",
     "broccoli-sass": "0.3.3",
-    "ember-cli": "0.1.7",
     "ember-cli-6to5": "0.2.1",
     "ember-cli-chart": "1.0.7",
     "ember-cli-content-security-policy": "0.3.0",
