--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,10 @@
 {
     "globals": {
         "EmberUploader": false,
-        "QUnit" : false,
-        "document" : false,
-        "randomColor" : false
+        "QUnit": false,
+        "document": false,
+        "randomColor": false,
+        "FormData": false
     },
     "extends": "kinvey-platform"
 }
