Temporary disable the rule for import/extensions

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,5 +6,8 @@
         "randomColor": false,
         "FormData": false
     },
-    "extends": "kinvey-platform"
+    "extends": "kinvey-platform",
+    "rules": {
+        "import/extensions": ["off"]
+    }
 }
